@@ -1,5 +1,8 @@
 /*
  * $Log: alloc.h,v $
+ * Revision 1.4  2020-12-02 14:50:38+05:30  Cprogrammer
+ * changed return type of alloc() to void *
+ *
  * Revision 1.3  2004-10-11 13:48:20+05:30  Cprogrammer
  * added prototypes
  *
@@ -11,12 +14,12 @@
 #define ALLOC_H
 
 /* @null@ *//* @out@ */
-char           *alloc(unsigned int);
+void           *alloc(unsigned int);
 void            alloc_free(char *);
 #ifdef _ALLOC_
 int             alloc_re();
 #else
-int             alloc_re(char *, unsigned int, unsigned int);
+int             alloc_re(void *, unsigned int, unsigned int);
 #endif
 
 #endif
