@@ -37,3 +37,5 @@ Release 1.0 Start 21/05/2020
 - 28/11/2020
 31. +HeaderName feature by Erwin Hoffman: display all headers which have
     HeaderName as the initial text
+- 02/12/2020
+32. changed return type of alloc to void *
